// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  border-radius: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  padding: 0.5em 0.75em;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  outline: none;
  width: 100%;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        aria-invalid="false"
        class="emotion-2"
        data-testid="pbl-input"
        id="custom-id"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  border-radius: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: var(--pbl-theme-colors-negative-main);
  width: 300px;
}

.emotion-1:focus {
  box-shadow: 0 0 0 3px var(--pbl-theme-colors-negative-lightest);
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  padding: 0.5em 0.75em;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  outline: none;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-body-fontFamily);
  font-size: var(--pbl-theme-typography-body-fontSize);
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-weight: var(--pbl-theme-typography-body-fontWeight);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-top: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-negative-main);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        aria-errormessage="custom-id-error"
        aria-invalid="true"
        class="emotion-2"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
    <p
      aria-live="polite"
      class="emotion-3"
      data-testid="pbl-input-infotext"
      id="custom-id-error"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  border-radius: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  padding: 0.5em 0.75em;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  outline: none;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-body-fontFamily);
  font-size: var(--pbl-theme-typography-body-fontSize);
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-weight: var(--pbl-theme-typography-body-fontWeight);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-top: clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem);
  color: var(--pbl-theme-colors-text-info);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        aria-describedby="custom-id-info"
        aria-invalid="false"
        class="emotion-2"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
    <p
      aria-live="polite"
      class="emotion-3"
      data-testid="pbl-input-infotext"
      id="custom-id-info"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-body-fontFamily);
  font-size: var(--pbl-theme-typography-body-fontSize);
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-weight: var(--pbl-theme-typography-body-fontWeight);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: clamp(0.375rem, 0.3214285714285714rem + 0.26785714285714285vw, 0.5625rem);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  border-radius: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  padding: 0.5em 0.75em;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: clamp(1rem, 0.9642857142857143rem + 0.17857142857142858vw, 1.125rem);
  outline: none;
  width: 100%;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      data-testid="pbl-input-label"
      for="custom-id"
    >
      <p
        class="emotion-1"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="emotion-2"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        aria-invalid="false"
        class="emotion-3"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
  </div>
</div>
`;
